[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/map_small.png" type="Texture" id=2]
[ext_resource path="res://game/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://test/Test.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/map_creation/BuyCards.gd" type="Script" id=5]
[ext_resource path="res://game/MoneyGrabRegion.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 268.096, 88 )

[node name="Game" type="Node2D" groups=[
"server",
]]
script = ExtResource( 1 )

[node name="GameBoard" type="Sprite" parent="."]
position = Vector2( 1200, 480 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="BuyCards" type="Node2D" parent="."]
position = Vector2( 1104, 88 )
script = ExtResource( 5 )

[node name="Nodes" type="Node2D" parent="."]

[node name="Regions" type="Node2D" parent="."]

[node name="MoneyGrabRegion" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoneyGrabRegion"]
position = Vector2( 768.571, 93.1938 )
shape = SubResource( 1 )

[node name="Connections" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
visible = true
position = Vector2( 0, 0 )

[node name="Test" parent="." instance=ExtResource( 4 )]
[connection signal="input_event" from="MoneyGrabRegion" to="MoneyGrabRegion" method="_on_MoneyGrabRegion_input_event"]
[connection signal="mouse_entered" from="MoneyGrabRegion" to="MoneyGrabRegion" method="_on_MoneyGrabRegion_mouse_entered"]
[connection signal="mouse_exited" from="MoneyGrabRegion" to="MoneyGrabRegion" method="_on_MoneyGrabRegion_mouse_exited"]
